--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -25,6 +25,24 @@ spec:
                 command: [ "sh", "-c", "sleep 5" ]
           ports:
             - containerPort: 9003
+          startupProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 9003
+            failureThreshold: 30
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 9003
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 9003
+            initialDelaySeconds: 5
+            periodSeconds: 15
           env:
             - name: BPL_JVM_THREAD_COUNT
               value: "50"
