--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -47,10 +47,10 @@ spec:
               port: 9003
             initialDelaySeconds: 5
             periodSeconds: 15
-          env:
-            - name: BPL_JVM_THREAD_COUNT
-              value: "50"
-            - name: SPRING_CLOUD_CONFIG_URI
-              value: http://config-service
-            - name: SPRING_RABBITMQ_HOST
-              value: bookshop-rabbitmq
+          volumeMounts:
+            - name: dispatcher-config-volume
+              mountPath: /workspace/config
+      volumes:
+        - name: dispatcher-config-volume
+          configMap:
+            name: dispatcher-config
