--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -46,7 +46,7 @@ jobs:
           kubectl: 1.30.2
           kubeval: 0.16.1
           command: |
-            kubeval --strict -d k8s
+            kustomize build k8s | kubeval --strict -
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/main' }}
